@@ -7,6 +7,9 @@ ChangeLog for hostapd
 	  identity lengths)
 	* fixed internal TLSv1 implementation for abbreviated handshake (used
 	  by EAP-FAST server)
+	* added support for setting VLAN ID for STAs based on local MAC ACL
+	  (accept_mac_file) as an alternative for RADIUS server-based
+	  configuration
 
 2008-08-10 - v0.6.4
 	* added peer identity into EAP-FAST PAC-Opaque and skip Phase 2
